--- a/articles/rfi/999958.md
+++ b/articles/rfi/999958.md
@@ -1,5 +1,5 @@
 <!--1713640502000-->
-[伊朗-以色列：以色列谨慎回应，似乎是为了让德黑兰可以选择不回应 - 法国世界报](https://www.rfi.fr/cn/%E4%B8%93%E6%A0%8F%E6%A3%80%E7%B4%A2/%E6%B3%95%E5%9B%BD%E4%B8%96%E7%95%8C%E6%8A%A5/20240419-%E4%BC%8A%E6%9C%97-%E4%BB%A5%E8%89%B2%E5%88%97-%E4%BB%A5%E8%89%B2%E5%88%97%E8%B0%A8%E6%85%8E%E5%9B%9E%E5%BA%94%EF%BC%8C%E4%BC%BC%E4%B9%8E%E6%98%AF%E4%B8%BA%E4%BA%86%E8%AE%A9%E5%BE%B7%E9%BB%91%E5%85%B0%E5%8F%AF%E4%BB%A5%E9%80%89%E6%8B%A9%E4%B8%8D%E5%9B%9E%E5%BA%94)
+[台湾宣布在本岛周边发现21架中国军机](https://www.rfi.fr/cn/%E5%8F%B0%E6%B9%BE/20240420-%E5%8F%B0%E6%B9%BE%E5%AE%A3%E5%B8%83%E5%9C%A8%E6%9C%AC%E5%B2%9B%E5%91%A8%E8%BE%B9%E5%8F%91%E7%8E%B021%E6%9E%B6%E4%B8%AD%E5%9B%BD%E5%86%9B%E6%9C%BA)
 ------
 
-<div>20/04/2024 - 00:34</div><img src="https://s.rfi.fr/media/display/bddd2032-0bde-11ea-9862-005056bff430/w:1280/p:16x9/fa_guo_shi_jie_bao_wb161923-rfi-cn-20150123_cartouche.jpg"><p><strong>周五，伊朗军事地点附近传出了爆炸声，目前尚不清楚伊朗所受袭击的规模和性质。德黑兰当局对爆炸轻描淡写，以色列政府和军队则还没有对此次袭击发表评论，也没有宣称对伊朗领土上的爆炸负责。自伊朗在上周六袭击以色列以来，国际社会一直在呼吁以色列做出温和的反应，以免整个地区都燃烧起来。                    </strong></p><div><p>法国世界报记者加扎尔·戈尔希里（Ghazal Golshiri）以及该报耶路撒冷通讯员路易斯·安伯特（Louis Imbert）联合写道，4月19日星期五一大早，以色列就伊朗4月13日对以色列领土发动的无人机和导弹袭击做出了回应。</p><p>据报道，伊朗中部城市伊斯法罕（Ispahan）附近发生爆炸，这里有多个军事基地，包括核设施和弹道导弹设施。4月14日，从这些军事地点有拍摄到导弹发射，射向至少一个以色列空军基地。</p><p>伊斯法罕市的一名居民告诉法国《世界报》说，他感受到了强烈的震动，他最初认为“是发生了地震。”隶属于伊朗革命卫队的法尔斯通讯社则提到“伊斯法罕陆军战斗机基地附近发生了三起爆炸”，并声称伊朗启动了拦截可能的无人机的防空系统。法尔斯通讯社还指出，另一个可疑飞行物体让距离一炼油厂几公里的大不里士（Tabriz，西北）的防空系统也被启动了。</p><p>然而，德黑兰当局对以色列的军事回应轻描淡写，至今，对以色列军事回应的性质和方式，外界依然不确定。</p><p>伊朗总统莱希周五发表讲话但没有提及爆炸事件。伊朗总统莱希周五在达姆甘市向数百人发表讲话，非常简短地提及了上周末伊朗对以色列发动前所未有的无人机和导弹袭击后中东紧张的国际局势，但没有提到几个小时前的爆炸事件。</p><p>伊朗媒体周五援引伊斯法罕陆军指挥官西亚沃什·米汉杜斯特（Siavosh Mihandoust）的话说，当地居民听到的爆炸声来自防空系统。这位指挥官坚称，“我们没有受到任何损害，也没有发生任何事件。”自周五黎明时分起，伊朗官方电视台就派遣记者前往伊斯法罕市中心，以表明那里局势平静，日常生活一切照常。</p><p><strong>伊朗说没有导弹袭击</strong></p><p>一名经常代表伊朗革命卫队发言的网络空间最高委员会的一名官员则否认此次袭击涉及导弹袭击。周五，以色列既没有证实也没有否认这一消息。这名伊朗官员声称，有无人机被击落，但没有导弹袭击。他说，被击落的无人机射程较短，是从伊朗境内发射的。一位伊朗分析人士在伊朗国家电视台上说，被击落的“微型无人机”是由“伊朗领土上的渗透者”发射的，他说，以色列国外情报机构有能力这么做，至少在过去，以色列国外情报机构已经进行过一次这一类型的攻击。在黎明时暂停的德黑兰机场的航班，原定周五上午恢复。</p><p>在以色列一边，截至周五晚上，以色列政府和军队尚没有对此次袭击发表评论，也没有宣称对伊朗领土上的爆炸负责。不过，以色列国家安全部长伊塔马尔·本·格维尔(Itamar Ben Gvir)对以色列回应的明显“虚弱”表示遗憾。本·格维尔来自宗教极右翼，被排除在战时内阁之外，他使用了一个希伯来语足球用语，表示射门缺乏力量。这显示，伊朗境内的爆炸，以色列脱不了干系。但以色列的回应既精确又规模有限，似乎以色列并不希望局势有新的升级。</p><p>就目前的情况来看，以色列似乎选择了相对谨慎的回应，以便让德黑兰当局可以选择不回应。</p><p><strong>叙利亚也遭遇了空袭</strong></p><p>另外，周五，除了伊朗，叙利亚也遭遇了空袭。叙利亚国家通讯社SANA援引军方消息人士的话称，以色列在夜间还袭击了叙利亚南部的防空系统，造成了一些“物质损失”。以色列这是为了表明它将继续对伊朗的地区盟友采取密集的军事行动。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div><div><div><span>作者：</span><a href="/cn/%E4%BD%9C%E8%80%85/%E9%98%BF%E6%9B%BC%E4%BA%AD/" title="阿曼亭">阿曼亭</a></div></div></div></div>
+<div>20/04/2024 - 09:35</div><img src="https://s.rfi.fr/media/display/800b6492-fee8-11ee-ad65-005056bfb2b6/w:1280/p:16x9/%E5%8F%B0%E6%B5%B7%E5%86%9B%E6%9C%BA.JPG"><p><strong>台湾国防部周六4月20日宣布，自当地时间8时15分（格林尼治标准时间0时15分）以来，在台湾岛周围已发现21架中国军机，此时距离当选总统赖清德的就职典礼还有一个月的时间。        </strong></p><div><p>法新社台北报道，台湾国防部在一份声明中说，"21 架飞机中有17 架越过了台湾海峡的中线"，台湾武装部队"正在使用监视系统观察这些活动，并已部署适当手段做出相应反应"。</p><p>该报道说，中线是中国和台湾之间的非官方分界线，但中国不承认。台湾是一个自治岛屿，北京声称是其领土的一部分，并希望有一天能够夺取台湾，必要时可以使用武力。</p><p>中国飞机入侵事件的激增是专家们所说的"灰色地带"战略的一部分，即没有采取实际战争行动的恐吓行动。</p><p>自 2016 年蔡英文当选台湾总统以来，中国这些行动愈演愈烈。蔡英文认为台湾事实上"已经独立"，而这是北京的红线。</p><p>蔡英文女士将于 5 月 20 日把她的职位移交给台湾现任副总统赖清德，赖清德和蔡女士一样都是民进党（PDP）党员。</p><p>作为1月13日总统选举的获胜者，赖清德也支持对北京采取强硬路线。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAX7s.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E5%258F%25B0%25E6%25B9%25BE%2F20240420-%25E5%258F%25B0%25E6%25B9%25BE%25E5%25AE%25A3%25E5%25B8%2583%25E5%259C%25A8%25E6%259C%25AC%25E5%25B2%259B%25E5%2591%25A8%25E8%25BE%25B9%25E5%258F%2591%25E7%258E%25B021%25E6%259E%25B6%25E4%25B8%25AD%25E5%259B%25BD%25E5%2586%259B%25E6%259C%25BA&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E5%8F%B0%E6%B9%BE%E5%AE%A3%E5%B8%83%E5%9C%A8%E6%9C%AC%E5%B2%9B%E5%91%A8%E8%BE%B9%E5%8F%91%E7%8E%B021%E6%9E%B6%E4%B8%AD%E5%9B%BD%E5%86%9B%E6%9C%BA%20-%20https%3A%2F%2Frfi.my%2FAX7s.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E5%8F%B0%E6%B9%BE%E5%AE%A3%E5%B8%83%E5%9C%A8%E6%9C%AC%E5%B2%9B%E5%91%A8%E8%BE%B9%E5%8F%91%E7%8E%B021%E6%9E%B6%E4%B8%AD%E5%9B%BD%E5%86%9B%E6%9C%BA%20-%20https%3A%2F%2Frfi.my%2FAX7s.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAX7s.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E5%8F%B0%E6%B9%BE%E5%AE%A3%E5%B8%83%E5%9C%A8%E6%9C%AC%E5%B2%9B%E5%91%A8%E8%BE%B9%E5%8F%91%E7%8E%B021%E6%9E%B6%E4%B8%AD%E5%9B%BD%E5%86%9B%E6%9C%BA&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
