--- a/articles/rfi/999987.md
+++ b/articles/rfi/999987.md
@@ -1,5 +1,5 @@
-<!--1713545104000-->
-[德国逮捕2俄间谍计划攻击美军基地](https://www.rfi.fr/cn/%E6%AC%A7%E6%B4%B2/20240418-%E5%BE%B7%E5%9B%BD%E9%80%AE%E6%8D%952%E4%BF%84%E9%97%B4%E8%B0%8D%E8%AE%A1%E5%88%92%E6%94%BB%E5%87%BB%E7%BE%8E%E5%86%9B%E5%9F%BA%E5%9C%B0)
+<!--1713545105000-->
+[副首相：英面临来自中、伊、俄、朝等敌对国家的诸多威胁](https://www.rfi.fr/cn/%E6%AC%A7%E6%B4%B2/20240418-%E5%89%AF%E9%A6%96%E7%9B%B8-%E8%8B%B1%E9%9D%A2%E4%B8%B4%E6%9D%A5%E8%87%AA%E4%B8%AD-%E4%BC%8A-%E4%BF%84-%E6%9C%9D%E7%AD%89%E6%95%8C%E5%AF%B9%E5%9B%BD%E5%AE%B6%E7%9A%84%E8%AF%B8%E5%A4%9A%E5%A8%81%E8%83%81)
 ------
 
-<div>18/04/2024 - 22:44</div><img src="https://s.rfi.fr/media/display/7c78ebe4-fdc4-11ee-a0fd-005056bfb2b6/w:1280/p:16x9/66210160d77c5330d1724475.png"><p><strong></strong></p><div><p>两名嫌犯是在德国东南部的拜罗伊特(Bayreuth)被拘捕的。德国检方18ri 表示，2名德俄双重国籍人士因涉嫌策划在德国进行蓄意破坏攻击而被捕，两人锁定目标包括美国军事设施，目的为了削弱德国对乌克兰的军事支持。</p><p>检察官说，这两名男子的名字仅证实为狄特尔S.（Dieter S.）和亚历山大 J.（Alexander J.）。正在布鲁塞尔开会的德国总理朔尔茨表示，“我们永远不会接受间谍活动在德国发生”。 俄罗斯方面则在其驻德国大使馆在 X 上发布的消息，谴责这种“荒唐可笑”以及缺乏“证据”的指控。</p><p>据《明镜周刊》报道，嫌疑人以及德国联邦国防军车队尤其关注巴伐利亚美军格拉芬沃尔(Grafenwöhr)基地，乌克兰士兵在那里接受使用美国艾布拉姆斯主战坦克的训练。</p><p>据《明镜周刊》报道，主嫌犯迪特尔·S. (Dieter S.) 现年 39 岁，自 2023 年 10 月以来一直在与一名与俄罗斯情报部门有联系的人员交换信息，以期在德国领土上实施可能的破坏活动。 据检方称，他的同伙亚历山大·J.(Alexander J.)现年 37 岁，从 2024 年 3 月底开始和迪特尔有密切的联系。</p><p>检察官称，“这些行动的目的尤其是破坏德国对乌克兰对抗俄罗斯侵略战争的军事支持”。 据报道，迪特·S. 声称自己准备好“对德国的军事基础设施和工业场所进行爆炸袭击和纵火袭击”。</p><p> </p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWt3.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E6%25AC%25A7%25E6%25B4%25B2%2F20240418-%25E5%25BE%25B7%25E5%259B%25BD%25E9%2580%25AE%25E6%258D%25952%25E4%25BF%2584%25E9%2597%25B4%25E8%25B0%258D%25E8%25AE%25A1%25E5%2588%2592%25E6%2594%25BB%25E5%2587%25BB%25E7%25BE%258E%25E5%2586%259B%25E5%259F%25BA%25E5%259C%25B0&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E5%BE%B7%E5%9B%BD%E9%80%AE%E6%8D%952%E4%BF%84%E9%97%B4%E8%B0%8D%E8%AE%A1%E5%88%92%E6%94%BB%E5%87%BB%E7%BE%8E%E5%86%9B%E5%9F%BA%E5%9C%B0%20-%20https%3A%2F%2Frfi.my%2FAWt3.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E5%BE%B7%E5%9B%BD%E9%80%AE%E6%8D%952%E4%BF%84%E9%97%B4%E8%B0%8D%E8%AE%A1%E5%88%92%E6%94%BB%E5%87%BB%E7%BE%8E%E5%86%9B%E5%9F%BA%E5%9C%B0%20-%20https%3A%2F%2Frfi.my%2FAWt3.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWt3.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E5%BE%B7%E5%9B%BD%E9%80%AE%E6%8D%952%E4%BF%84%E9%97%B4%E8%B0%8D%E8%AE%A1%E5%88%92%E6%94%BB%E5%87%BB%E7%BE%8E%E5%86%9B%E5%9F%BA%E5%9C%B0&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>18/04/2024 - 22:54</div><img src="https://s.rfi.fr/media/display/d267f044-fdc5-11ee-addf-005056bfb2b6/w:1280/p:16x9/bfb16505dff5e264d5c04abde2a58861fef405e57c416b42c8f1f0c36b35894a.png"><p><strong></strong></p><div><p>就教育界，他特别表示，他希望大学副校长能够收到安全部门的简报，以便更好地“了解问题的严重程度”。</p><p>道登还希望就敏感领域的研究安全展开咨询，提高大学经费的透明度，并研究现有的国家安全和外国投资法律如何适用于教师。</p><p>另一方面，这位部长强调说，“新冠疫情和俄罗斯在乌克兰的战争暴露了全球供应链的相互关联性，以及在俄罗斯推高天然气价格和中国实施经济胁迫行为的情况下，这种相互关联性的程度”。</p><p>道登宣布，英国当局将审查当前对半导体等新兴或战略技术的出口管制。英国政府已利用《国家安全与投资（NSI）法案》阻止中国实体多次收购英国半导体制造商的尝试。</p><p>英国副首相奥利弗·道登（Oliver James Dowden）表示，“我们必须确保我们在国外销售的技术产品不会被用来损害我们的国家利益”。</p><p>他继续说道，“我们看到有人蓄意利用贸易限制作为胁迫武器”；而“中国针对立陶宛和俄罗斯针对厄瓜多尔的做法”就是实例。他还补充说，“我们还看到了公共部门采购构成国家安全风险的例子，从监控系统到电信基础设施”。</p><p>他坚称：“这就是为什么我禁止华为参与我们的 5G 网络，并禁止中国监控设备进入主要政府站点。”伦敦于 2020 年 7 月宣布将中国巨头华为排除在其 5G 网络之外，理由是该国存在安全风险。</p><p> </p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWtB.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E6%25AC%25A7%25E6%25B4%25B2%2F20240418-%25E5%2589%25AF%25E9%25A6%2596%25E7%259B%25B8-%25E8%258B%25B1%25E9%259D%25A2%25E4%25B8%25B4%25E6%259D%25A5%25E8%2587%25AA%25E4%25B8%25AD-%25E4%25BC%258A-%25E4%25BF%2584-%25E6%259C%259D%25E7%25AD%2589%25E6%2595%258C%25E5%25AF%25B9%25E5%259B%25BD%25E5%25AE%25B6%25E7%259A%2584%25E8%25AF%25B8%25E5%25A4%259A%25E5%25A8%2581%25E8%2583%2581&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E5%89%AF%E9%A6%96%E7%9B%B8%EF%BC%9A%E8%8B%B1%E9%9D%A2%E4%B8%B4%E6%9D%A5%E8%87%AA%E4%B8%AD%E3%80%81%E4%BC%8A%E3%80%81%E4%BF%84%E3%80%81%E6%9C%9D%E7%AD%89%E6%95%8C%E5%AF%B9%E5%9B%BD%E5%AE%B6%E7%9A%84%E8%AF%B8%E5%A4%9A%E5%A8%81%E8%83%81%20-%20https%3A%2F%2Frfi.my%2FAWtB.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E5%89%AF%E9%A6%96%E7%9B%B8%EF%BC%9A%E8%8B%B1%E9%9D%A2%E4%B8%B4%E6%9D%A5%E8%87%AA%E4%B8%AD%E3%80%81%E4%BC%8A%E3%80%81%E4%BF%84%E3%80%81%E6%9C%9D%E7%AD%89%E6%95%8C%E5%AF%B9%E5%9B%BD%E5%AE%B6%E7%9A%84%E8%AF%B8%E5%A4%9A%E5%A8%81%E8%83%81%20-%20https%3A%2F%2Frfi.my%2FAWtB.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWtB.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E5%89%AF%E9%A6%96%E7%9B%B8%EF%BC%9A%E8%8B%B1%E9%9D%A2%E4%B8%B4%E6%9D%A5%E8%87%AA%E4%B8%AD%E3%80%81%E4%BC%8A%E3%80%81%E4%BF%84%E3%80%81%E6%9C%9D%E7%AD%89%E6%95%8C%E5%AF%B9%E5%9B%BD%E5%AE%B6%E7%9A%84%E8%AF%B8%E5%A4%9A%E5%A8%81%E8%83%81&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
