--- a/articles/rfi/999991.md
+++ b/articles/rfi/999991.md
@@ -1,5 +1,5 @@
-<!--1713541502000-->
-[美媒：美国得到以色列袭击伊朗的预告但未同意也未参与](https://www.rfi.fr/cn/%E5%9B%BD%E9%99%85/20240419-%E7%BE%8E%E5%AA%92-%E7%BE%8E%E5%9B%BD%E5%BE%97%E5%88%B0%E4%BB%A5%E8%89%B2%E5%88%97%E8%A2%AD%E5%87%BB%E4%BC%8A%E6%9C%97%E7%9A%84%E9%A2%84%E5%91%8A%E4%BD%86%E6%9C%AA%E5%90%8C%E6%84%8F%E4%B9%9F%E6%9C%AA%E5%8F%82%E4%B8%8E)
+<!--1713543301000-->
+[伊朗中部传爆炸声  是以色列报复？看美联社如何分析](https://www.rfi.fr/cn/%E4%B8%AD%E4%B8%9C/20240419-%E4%BC%8A%E6%9C%97%E4%B8%AD%E9%83%A8%E4%BC%A0%E7%88%86%E7%82%B8%E5%A3%B0-%E6%98%AF%E4%BB%A5%E8%89%B2%E5%88%97%E6%8A%A5%E5%A4%8D-%E7%9C%8B%E7%BE%8E%E8%81%94%E7%A4%BE%E5%A6%82%E4%BD%95%E5%88%86%E6%9E%90)
 ------
 
-<div>19/04/2024 - 13:47</div><img src="https://s.rfi.fr/media/display/c0fc8d5c-fe37-11ee-b2ed-005056a97e36/w:1280/p:16x9/Carte-Iran-RFI.png"><p><strong>对于周五凌晨伊朗中部听到巨大的爆炸声，据美国媒体报道，美国高级官员称，以色列对伊朗发动袭击是为了报复上周末以色列遭到的史无前例的无人机和导弹袭击。华盛顿得到了以色列的预告，但没有同意。        </strong></p><div><p>美国全国广播公司（NBC）和美国有线电视新闻网（CNN）分别援引熟悉此事的消息人士和一名美国官员的话报道说，以色列已提前向华盛顿发出了袭击警告，但美国没有同意这次行动，也没有参与实施。</p><p>白宫没有立即就伊朗中部的爆炸事件发表评论。据 CNN 报道，一名美国官员说：“我们没有批准这个报复行动”。</p><p>上周末，伊朗向以色列境内发射了数百枚导弹和无人机，以色列警告称将进行报复。在伊朗袭击上周末袭击以色列之前，伊朗驻大马士革领事馆遭袭击，德黑兰认为以色列负有责任。</p><p>今天以色列军队发言人就周五夜间伊朗中部的爆炸事件告诉法新社记者：“我们目前不予置评”。</p><p>不过，以色列极右翼的国家安全部长本 格维尔（Ben Gvir）在 X 上发布了一句话："软弱！"</p><p>以色列军方在周五早晨宣布，以色列北部已启动警报。</p><p>美国驻以色列使馆限制其雇员和亲属的活动范围。</p><p>伊朗总统莱西在本周早些时候表示，以色列对伊朗领土的任何攻击"都将遭到严厉回应"。</p><p>伊朗周四在联合国安理会表示，"必须迫使以色列停止针对我们利益的任何进一步军事冒险"，而联合国秘书长则警告说，中东正处于"最危险的时刻"。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWyz.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E5%259B%25BD%25E9%2599%2585%2F20240419-%25E7%25BE%258E%25E5%25AA%2592-%25E7%25BE%258E%25E5%259B%25BD%25E5%25BE%2597%25E5%2588%25B0%25E4%25BB%25A5%25E8%2589%25B2%25E5%2588%2597%25E8%25A2%25AD%25E5%2587%25BB%25E4%25BC%258A%25E6%259C%2597%25E7%259A%2584%25E9%25A2%2584%25E5%2591%258A%25E4%25BD%2586%25E6%259C%25AA%25E5%2590%258C%25E6%2584%258F%25E4%25B9%259F%25E6%259C%25AA%25E5%258F%2582%25E4%25B8%258E&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E7%BE%8E%E5%AA%92%EF%BC%9A%E7%BE%8E%E5%9B%BD%E5%BE%97%E5%88%B0%E4%BB%A5%E8%89%B2%E5%88%97%E8%A2%AD%E5%87%BB%E4%BC%8A%E6%9C%97%E7%9A%84%E9%A2%84%E5%91%8A%E4%BD%86%E6%9C%AA%E5%90%8C%E6%84%8F%E4%B9%9F%E6%9C%AA%E5%8F%82%E4%B8%8E%20-%20https%3A%2F%2Frfi.my%2FAWyz.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E7%BE%8E%E5%AA%92%EF%BC%9A%E7%BE%8E%E5%9B%BD%E5%BE%97%E5%88%B0%E4%BB%A5%E8%89%B2%E5%88%97%E8%A2%AD%E5%87%BB%E4%BC%8A%E6%9C%97%E7%9A%84%E9%A2%84%E5%91%8A%E4%BD%86%E6%9C%AA%E5%90%8C%E6%84%8F%E4%B9%9F%E6%9C%AA%E5%8F%82%E4%B8%8E%20-%20https%3A%2F%2Frfi.my%2FAWyz.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWyz.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E7%BE%8E%E5%AA%92%EF%BC%9A%E7%BE%8E%E5%9B%BD%E5%BE%97%E5%88%B0%E4%BB%A5%E8%89%B2%E5%88%97%E8%A2%AD%E5%87%BB%E4%BC%8A%E6%9C%97%E7%9A%84%E9%A2%84%E5%91%8A%E4%BD%86%E6%9C%AA%E5%90%8C%E6%84%8F%E4%B9%9F%E6%9C%AA%E5%8F%82%E4%B8%8E&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>19/04/2024 - 15:21</div><img src="https://s.rfi.fr/media/display/d33d9a5e-1266-11ea-b20a-005056a99247/w:1280/p:16x9/2018-07-16t122734z_63342907_rc14637277c0_rtrmadp_3_iran-haj-khamenei.jpg"><p><strong>周五（4月19号）清晨，伊朗在发现无人机后向伊斯法罕附近的一个主要空军基地和一个核设施发射了防空系统，这些无人机被怀疑是以色列袭击的一部分，以报复德黑兰对该国前所未有的无人机和导弹袭击。但没有伊朗官员直接承认以色列发动袭击的可能性，以色列军方也没有回应置评请求。据报周五是伊朗最高领袖阿亚图拉-阿里-哈梅内伊85岁生日。        </strong></p><div><p>美联社海湾和伊朗新闻主任乔恩-甘布雷尔（Jon Gambrell）报道称："伊朗在该国中部地区发射了防空系统，这似乎是以色列对几天前德黑兰发动的袭击的某种回应。现在，我们所知道的还很零散。截至今天上午，伊朗已经停止了航班飞行，防空系统也已经启动，人们听到了伊斯法罕附近的爆炸声。伊斯法罕附近有一个大型空军基地，伊朗在那里拥有1979年伊斯兰革命前购买的F-14 "雄猫 "战斗机。这里还有一个重要的核设施。伊朗并没有说这是一次袭击。他们对此轻描淡写。他们今天在国家电视台上试图拿这件事开玩笑。但在此之前，德黑兰发动了一次袭击，向以色列发射了数百架无人机和导弹，而在此之前，以色列在叙利亚发动了另一次袭击，杀害了伊朗准军事革命卫队的成员。"</p><p>对于伊朗的低调，乔恩-甘布雷尔引述分析人士称，这可能是伊朗试图避嫌，避免局势升级的一次尝试。伊朗对以色列的袭击是史无前例的，而今天的袭击似乎没有造成任何严重破坏。但这确实表明以色列有能力向伊朗发射无人机，而且今天还是伊朗最高领袖阿亚图拉-阿里-哈梅内伊的85岁生日。因此，分析人士称，这可能是对伊朗的一个警告，即以色列仍有能力在未来发动袭击。</p><p>« 纽约时报》援引匿名以色列官员的话称，这次袭击发生在伊朗最高领袖阿亚图拉-阿里-哈梅内伊85岁生日之际。</p><p>上周六晚间，伊朗发射了数百架无人机、弹道导弹和巡航导弹，发动了前所未有的袭击，使中东更接近一场地区性战争。以色列军方发言人表示，发射次数超过 300 次，但其中 99% 被拦截。</p><p>美联社今天报道称，伊朗总统当天访问伊朗城市达姆甘时称，最近针对以色列的导弹和无人机袭击是伊朗“自豪和力量的源泉”。莱西说：“这次行动成为伊斯兰共和国及其武装部队力量的标志。它也显示了我们国家钢铁般的决心。”</p><p>莱西声称这次袭击是必要的，并团结了该国的政治派别。</p><p>法新社包袋，有媒体援引美国高级官员的话称，以色列周五的袭击是为了报复上周末针对以色列的史无前例的无人机和导弹袭击。然而，伊朗塔斯尼姆通讯社援引 "消息灵通人士 "的话说，"没有关于外国袭击的消息"。</p><p>一些国家和国际组织仍然谨慎地作出反应，呼吁保持克制。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAX0l.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25B8%25AD%25E4%25B8%259C%2F20240419-%25E4%25BC%258A%25E6%259C%2597%25E4%25B8%25AD%25E9%2583%25A8%25E4%25BC%25A0%25E7%2588%2586%25E7%2582%25B8%25E5%25A3%25B0-%25E6%2598%25AF%25E4%25BB%25A5%25E8%2589%25B2%25E5%2588%2597%25E6%258A%25A5%25E5%25A4%258D-%25E7%259C%258B%25E7%25BE%258E%25E8%2581%2594%25E7%25A4%25BE%25E5%25A6%2582%25E4%25BD%2595%25E5%2588%2586%25E6%259E%2590&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E4%BC%8A%E6%9C%97%E4%B8%AD%E9%83%A8%E4%BC%A0%E7%88%86%E7%82%B8%E5%A3%B0%20%20%E6%98%AF%E4%BB%A5%E8%89%B2%E5%88%97%E6%8A%A5%E5%A4%8D%EF%BC%9F%E7%9C%8B%E7%BE%8E%E8%81%94%E7%A4%BE%E5%A6%82%E4%BD%95%E5%88%86%E6%9E%90%20-%20https%3A%2F%2Frfi.my%2FAX0l.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E4%BC%8A%E6%9C%97%E4%B8%AD%E9%83%A8%E4%BC%A0%E7%88%86%E7%82%B8%E5%A3%B0%20%20%E6%98%AF%E4%BB%A5%E8%89%B2%E5%88%97%E6%8A%A5%E5%A4%8D%EF%BC%9F%E7%9C%8B%E7%BE%8E%E8%81%94%E7%A4%BE%E5%A6%82%E4%BD%95%E5%88%86%E6%9E%90%20-%20https%3A%2F%2Frfi.my%2FAX0l.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAX0l.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E4%BC%8A%E6%9C%97%E4%B8%AD%E9%83%A8%E4%BC%A0%E7%88%86%E7%82%B8%E5%A3%B0%20%20%E6%98%AF%E4%BB%A5%E8%89%B2%E5%88%97%E6%8A%A5%E5%A4%8D%EF%BC%9F%E7%9C%8B%E7%BE%8E%E8%81%94%E7%A4%BE%E5%A6%82%E4%BD%95%E5%88%86%E6%9E%90&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
