--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+4-21 [乌克兰、以色列、台湾对美国众议院通过援助法案表示感谢，中俄反对](/articles/voa/1016232.md)
+
 4-21 [至少14名巴勒斯坦人死于西岸的暴力](/articles/voa/1016233.md)
 
 4-21 [马尔代夫将在中印竞争的阴影下举行选举投票](/articles/voa/1016234.md)
@@ -598,6 +600,4 @@
 4-10 [印太美军司令：中国试图以武力扩张领土空间](/articles/voa/1016530.md)
 
 4-9 [台湾年度汉光演习在即，演练反制敌方由演转战能力和建立海上击杀链](/articles/voa/1016531.md)
-
-4-9 [习近平会见俄罗斯外长，表示与俄罗斯继续保持密切交往](/articles/voa/1016532.md)
 
