--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+4-21 [學人Scholar｜劳东燕：压力端转移到最为弱势的群体，发生恶性刑事案件是迟早的事](/articles/cdt/341449.md)
+
 4-21 [每日一语 2024.4.20](/articles/cdt/341451.md)
 
 4-21 [歪脑｜图片故事：我的时薪](/articles/cdt/341462.md)
@@ -598,6 +600,4 @@
 3-18 [新周刊｜30岁了，我妈还在我的家长群里](/articles/cdt/342548.md)
 
 3-18 [蕨经｜邯郸留守儿童杀人事件，是这个社会成年人的悲剧](/articles/cdt/342551.md)
-
-3-18 [【404文库】“于近处沉默，却于远处愤怒？”（外二篇）](/articles/cdt/342553.md)
 
