--- a/articles/rfi/999950.md
+++ b/articles/rfi/999950.md
@@ -1,5 +1,5 @@
-<!--1713674702000-->
-[巴基斯坦自杀式袭击: 据称遇袭的日本人被误认为是中国人](https://www.rfi.fr/cn/%E5%9B%BD%E9%99%85/20240420-%E5%B7%B4%E5%9F%BA%E6%96%AF%E5%9D%A6%E8%87%AA%E6%9D%80%E5%BC%8F%E8%A2%AD%E5%87%BB-%E6%8D%AE%E7%A7%B0%E9%81%87%E8%A2%AD%E7%9A%84%E6%97%A5%E6%9C%AC%E4%BA%BA%E8%A2%AB%E8%AF%AF%E8%AE%A4%E4%B8%BA%E6%98%AF%E4%B8%AD%E5%9B%BD%E4%BA%BA)
+<!--1713683707000-->
+[苹果在北京压力下下架Meta两款社交软件WhatsApp和Threads - 法国报纸摘要](https://www.rfi.fr/cn/%E4%B8%93%E6%A0%8F%E6%A3%80%E7%B4%A2/%E6%B3%95%E5%9B%BD%E6%8A%A5%E7%BA%B8%E6%91%98%E8%A6%81/20240420-%E8%8B%B9%E6%9E%9C%E5%9C%A8%E5%8C%97%E4%BA%AC%E5%8E%8B%E5%8A%9B%E4%B8%8B%E4%B8%8B%E6%9E%B6meta%E4%B8%A4%E6%AC%BE%E7%A4%BE%E4%BA%A4%E8%BD%AF%E4%BB%B6whatsapp%E5%92%8Cthreads)
 ------
 
-<div>20/04/2024 - 10:30</div><img src="https://s.rfi.fr/media/display/3a174222-fed8-11ee-805b-005056bf30b7/w:1280/p:16x9/2024-04-19T070615Z_942085290_RC2G97ATX36P_RTRMADP_3_PAKISTAN-ATTACK.JPG"><p><strong>巴基斯坦南部卡拉奇周五（4月19日）发生针对汽车的自杀式攻击，车内的五名日本男子所幸一人受轻伤，其他人未有大碍。两名袭击者均已死亡。遇袭的5人为一家日本公司雇员，爆炸发生时正乘车前往卡拉奇出口工业区的途中。报道指，日本人在巴基斯坦很少成为极端组织的攻击目标，日本媒体暗示他们可能被误当作了中国人而遇袭。        </strong></p><div><p>据本台法语部驻东京特约记者费德里克 查理（<strong>Frédéric Charles</strong>）的报道，巴基斯坦极端主义团体对中国在该国资助的工业项目怀有深刻敌意，他们的大多数攻击都是针对中国公民。日本权威财经媒体《日经新闻》报道指，此次攻击中，乘坐防弹车前往卡拉奇港口区的五名日本男子可能被误认为是中国公民。巴基斯坦警方也提及了这种可能性。</p><p>此次袭击据信是第一次针对在巴基斯坦的日本公司的员工。一位专门研究巴基斯坦激进主义的学者告诉日经新闻说，“在巴基斯坦工作的日本人开始担心该国武装分子可能会因长相而把他们误认为是中国人”。反恐专家库拉姆·伊克巴尔（Kuram Iqbal）表示，这次袭击显然是一起身份误袭案件。他说，“日本从未受到巴基斯坦恐怖分子的注意。“</p><p>报道指，日本在巴基斯坦的经济存在与中国相比很少，而中国资助的项目被认为不会给当地居民带来任何好处，大部分工作岗位都流向了中国劳动力。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAX8A.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E5%259B%25BD%25E9%2599%2585%2F20240420-%25E5%25B7%25B4%25E5%259F%25BA%25E6%2596%25AF%25E5%259D%25A6%25E8%2587%25AA%25E6%259D%2580%25E5%25BC%258F%25E8%25A2%25AD%25E5%2587%25BB-%25E6%258D%25AE%25E7%25A7%25B0%25E9%2581%2587%25E8%25A2%25AD%25E7%259A%2584%25E6%2597%25A5%25E6%259C%25AC%25E4%25BA%25BA%25E8%25A2%25AB%25E8%25AF%25AF%25E8%25AE%25A4%25E4%25B8%25BA%25E6%2598%25AF%25E4%25B8%25AD%25E5%259B%25BD%25E4%25BA%25BA&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E5%B7%B4%E5%9F%BA%E6%96%AF%E5%9D%A6%E8%87%AA%E6%9D%80%E5%BC%8F%E8%A2%AD%E5%87%BB%3A%20%E6%8D%AE%E7%A7%B0%E9%81%87%E8%A2%AD%E7%9A%84%E6%97%A5%E6%9C%AC%E4%BA%BA%E8%A2%AB%E8%AF%AF%E8%AE%A4%E4%B8%BA%E6%98%AF%E4%B8%AD%E5%9B%BD%E4%BA%BA%20-%20https%3A%2F%2Frfi.my%2FAX8A.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E5%B7%B4%E5%9F%BA%E6%96%AF%E5%9D%A6%E8%87%AA%E6%9D%80%E5%BC%8F%E8%A2%AD%E5%87%BB%3A%20%E6%8D%AE%E7%A7%B0%E9%81%87%E8%A2%AD%E7%9A%84%E6%97%A5%E6%9C%AC%E4%BA%BA%E8%A2%AB%E8%AF%AF%E8%AE%A4%E4%B8%BA%E6%98%AF%E4%B8%AD%E5%9B%BD%E4%BA%BA%20-%20https%3A%2F%2Frfi.my%2FAX8A.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAX8A.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E5%B7%B4%E5%9F%BA%E6%96%AF%E5%9D%A6%E8%87%AA%E6%9D%80%E5%BC%8F%E8%A2%AD%E5%87%BB%3A%20%E6%8D%AE%E7%A7%B0%E9%81%87%E8%A2%AD%E7%9A%84%E6%97%A5%E6%9C%AC%E4%BA%BA%E8%A2%AB%E8%AF%AF%E8%AE%A4%E4%B8%BA%E6%98%AF%E4%B8%AD%E5%9B%BD%E4%BA%BA&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>20/04/2024 - 12:23</div><img src="https://s.rfi.fr/media/display/de712a84-105a-11ea-a2a3-005056bff430/w:1280/p:16x9/03-revue-de-presse_0.png"><p><strong>周六（4月20日）法国主要报纸有关中国的报道主要集中于经济和社会，在北京的压力下，苹果清理在中国的应用程序虚拟商店App Store，删除了Meta旗下社交软件WhatsApp和Threads。权威《世界报》和经济性《回声报》都对此给与报道。                    </strong></p><div><p>WhatsApp是拥有30亿用户的世界领先通讯工具，但几天来，它已在中国无法下载，苹果公司周五证实，已从中国的虚拟苹果商店中删除该应有程序，其他已经消失的应用还有同属Meta的社交软件 Threads、以及Telegram 和 Signal。</p><p>报道指，此举尽管对Meta的经济影响微乎其微，因为在中国，WhatsApp的主要用户是一些外籍人士、留学生及外国游客，而所有的中国人使用的都是微信这一日常生活必不可少的超级应用，WhatsApp此前已被北京封锁多年，通常只能通过付费VPN翻墙软件才能访问和断续使用。</p><p>《世界报》写道，中国密切监控媒体和互联网，对其有严格的监管和审查，杜绝如何对国家政策可能有负面影响或造成动荡的内容。谷歌、油管等许多外国网站、应用程序和X、Instagram、Facebook等社交网络只有通过VPN才能使用。</p><p>现在，WhatsApp在中国将不再能下载。报道指，中国似乎希望对应用程序给与更多地控制，而此时这样做的矛盾之处是，中国正在恢复与外部世界的外交、文化和人文交流，并试图安抚外国企业来华投资以重振本国经济。此外，该措施也证实了苹果在中国的困难，以及该品牌在中国长期以来的所具有的标志性地位，相对于当局而言，该品牌可能的议价能力越来越弱。</p><p>根据苹果公司表示，正是中国国家网信办，出于“国家安全”的原因“命令”其删除这些应用程序。简言之，可能是苹果或Meta拒绝遵守一项新规定：自4月1日起，中国所有应用程序都必须在工信部正式“注册”，否则将停止在中国运营。据一直在分析该法规的律师事务所Dezan Shira称，该措施自2000年以来一直针对于网站实施，用以打击网络欺诈。微信上的“小应用”也受到影响。但为获得通过，应用程序必须提供潜在的敏感技术信息，例如服务器位置、IP 地址等。</p><p>这是否触及苹果的红线？苹果在一份声明中说，“我们有义务尊重我们经营所在国家的法律，即使我们并不同意”。据路透社报道，为什么苹果只删除了WhatsApp，而其他Meta应用程序，如Facebook、Instagram或Messenger等周五仍然可以下载，对此还有待观察，苹果和Meta目前没有给与置评。</p><p>无论如何这并不是首次外国应用程序被中国屏蔽，《回声报》提到2021 年，当北京接管火爆的私人在线辅导行业时，语言学习软件Duolingo在中国的应用商店中就被下架了近一年。2017 年，苹果也在其中国应用商店中删除《纽约时报》的应用程序今。</p><p>《回声报》指，苹果下架两款Meta应用是在该集团首席执行官库克于3月下旬访问中国之后。苹果在中国这一其全球第三大市场正面临困境：消费减弱，数百万公务员不再能公开购买iPhone，而来自中国品牌的本地竞争日益激烈。为重夺优势，最近苹果决定在上海开设第8家苹果店。目前上海的苹果店数量甚至已超过纽约。</p><p><strong>北京半程马拉松赛“放水”争议 何杰和三名外籍选手被取消成绩</strong></p><p>上周日北京半程马拉松比赛中国选手何杰夺冠争议是费加罗有关中国报道的另一话题，组织者周五宣布取消何杰和协助其夺冠的其他三名肯尼亚及埃塞俄比亚选手的获奖资格。比赛视频被网络疯传引发巨大争议，促使组织方在赛后展开调查。</p><p>画面中2023年亚运会马拉松金牌得主、中国运动员何杰在接近终点时一度被三名外籍选手超越，但后者随后似乎放慢速度，并示意何杰加速，这一画面令人惊讶。三名外籍选手之一的姆南加特之后告诉BBC说，他们三人是作为“野兔”参加，即只是负责带跑，但比赛中他们确是佩戴着参赛号码布参加了比赛。组委会在央视援引的声明中说，，三名外籍选手确实是配速员，但负责比赛的合作公司并未这样宣布而实际作为选手参赛。最终何杰和三名外籍选手被宣布取消比赛成绩。组委会对没有及时“发现并纠正”问题表示道歉。</p><p>此次争议引发了中国网络的巨大震撼，一位微博网民说，“体育精神被毁，这是一种耻辱”。报道回顾近年来多项中国体育赛事饱受争议。包括2019年徐州国际马拉松赛的一名参赛者被发现在比赛时骑自行车代跑，以及中国一支定向运动队因在军运会上“作弊”被取消参赛资格。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div><div><div><span>作者：</span><a href="/cn/%E4%BD%9C%E8%80%85/%E6%9E%97%E5%85%B0/" title="林兰">林兰</a></div></div></div></div>
