--- a/articles/rfi/999986.md
+++ b/articles/rfi/999986.md
@@ -1,5 +1,5 @@
-<!--1713552301000-->
-[美众院即将投票对乌援助法案 五角大楼：有些军援几天内就能运抵乌克兰](https://www.rfi.fr/cn/%E5%9B%BD%E9%99%85/20240419-%E7%BE%8E%E4%BC%97%E9%99%A2%E5%8D%B3%E5%B0%86%E6%8A%95%E7%A5%A8%E5%AF%B9%E4%B9%8C%E6%8F%B4%E5%8A%A9%E6%B3%95%E6%A1%88-%E4%BA%94%E8%A7%92%E5%A4%A7%E6%A5%BC-%E6%9C%89%E4%BA%9B%E5%86%9B%E6%8F%B4%E5%87%A0%E5%A4%A9%E5%86%85%E5%B0%B1%E8%83%BD%E8%BF%90%E6%8A%B5%E4%B9%8C%E5%85%8B%E5%85%B0)
+<!--1713552303000-->
+[以色列被指对伊朗发动攻击 伊朗中部听到剧烈爆炸声](https://www.rfi.fr/cn/%E5%9B%BD%E9%99%85/20240419-%E4%BB%A5%E8%89%B2%E5%88%97%E8%A2%AB%E6%8C%87%E5%AF%B9%E4%BC%8A%E6%9C%97%E5%8F%91%E5%8A%A8%E6%94%BB%E5%87%BB-%E4%BC%8A%E6%9C%97%E4%B8%AD%E9%83%A8%E5%90%AC%E5%88%B0%E5%89%A7%E7%83%88%E7%88%86%E7%82%B8%E5%A3%B0)
 ------
 
-<div>19/04/2024 - 20:25</div><img src="https://s.rfi.fr/media/display/48c829c8-fe77-11ee-9ad8-005056a90284/w:1280/p:16x9/AP24109824140967.jpg"><p><strong>据两位美国官员透露，五角大楼正准备迅速批准一项对乌克兰的武器援助计划，其中包括急需的火炮和防空系统，此刻正值美国国会正在排队投票以通过对乌的额外军援拨款。        </strong></p><div><p>上述两位美国官员向政客新闻网表示，拜登政府尚未最终决定这批资金的规模和内容，他们因涉及敏感的内部讨论而被允许匿名。但其中一位官员说，五角大楼官员正在努力汇总一揽子美国装备，一旦立法通过并经总统签署，就能迅速通过官僚程序。该官员说：“他们将很快向（奥斯汀）防长提出建议，随后很快就会提交给总统”。</p><p>两位官员说，这笔资金将包括用于补充乌克兰武器库的火炮和防空系统，这将是美国自去年12月因国会对总统追加援助的要求停滞不前而耗尽资金以来的第二笔资金。白宫上个月批准了一项总额为3亿美元的对乌紧急援助计划，使用的是之前合同节省下来的成本。</p><p>第一位官员说，许多美国武器已经存放在欧洲各地的仓库中，可以立即运往乌克兰。有些物资几天内就能运抵乌克兰，有些则可能需要数周时间。</p><p>美国国防部发言人莱德（Patrick Ryder）少将拒绝透露即将到来的一揽子计划的具体内容，但在周四告诉记者，美国拥有“非常强大的物流网络，使我们能够非常迅速地运送物资”——可能在几天之内。莱德说，“我们当然理解并重视这种紧迫性，并已做好迅速行动的准备”。</p><p>美国众议院即将于周六就四项法案进行投票，这些法案将拨款950亿美元用于援助乌克兰、以色列和印太地区的合作伙伴。一旦获得通过，参议院还必须在拜登签署之前批准该援助方案。在用于乌克兰的近610亿美元中，约480亿美元将拨给五角大楼，用于武装基辅、补充武器和支付在欧洲的军事行动。该法案为美军提供了232亿美元，用于补充提供给乌克兰的武器装备库存。</p><p>另有138亿美元将用于“乌克兰安全援助计划”，供五角大楼为基辅购买新武器。还有113亿美元将用于加强在欧洲的美军行动。该立法重新授权五角大楼将价值78亿美元的现有武器从库存中运往乌克兰，然后由一揽子计划中增加的资金取代。</p><p>美国国防部负责国际安全事务的助理防长沃兰德（Celeste Wallander）最近告诉议员们，一旦国会最终批准援助，五角大楼将迅速开始运送弹药、炮弹和防空武器。</p><p>沃兰德对美国众议院军事委员会说：“在（美国欧洲司令部）和（美国运输司令部）的支持下，我们将能够在一两周内立即开始向乌克兰提供弹药、炮弹和拦截器”。</p><p>拜登政府多名高官本周强调，如果美国国会不通过额外拨款，乌克兰将很快陷入困境。美国中情局局长比尔·伯恩斯（Bill Burns）说，如果没有美国的新武器援助，乌克兰可能在今年年底前被击败。</p><p>美国国防部长奥斯汀（Lloyd Austin）则告诉议员们，在乌军苦于弹药短缺之际，俄军正在取得进展。奥斯汀指出：“我们已经看到战场上的局势开始向对俄罗斯有利的方向转变。我们看到他们正在逐步取得进展。我们看到乌克兰人在坚守阵地方面受到了挑战”。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAX4K.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E5%259B%25BD%25E9%2599%2585%2F20240419-%25E7%25BE%258E%25E4%25BC%2597%25E9%2599%25A2%25E5%258D%25B3%25E5%25B0%2586%25E6%258A%2595%25E7%25A5%25A8%25E5%25AF%25B9%25E4%25B9%258C%25E6%258F%25B4%25E5%258A%25A9%25E6%25B3%2595%25E6%25A1%2588-%25E4%25BA%2594%25E8%25A7%2592%25E5%25A4%25A7%25E6%25A5%25BC-%25E6%259C%2589%25E4%25BA%259B%25E5%2586%259B%25E6%258F%25B4%25E5%2587%25A0%25E5%25A4%25A9%25E5%2586%2585%25E5%25B0%25B1%25E8%2583%25BD%25E8%25BF%2590%25E6%258A%25B5%25E4%25B9%258C%25E5%2585%258B%25E5%2585%25B0&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E7%BE%8E%E4%BC%97%E9%99%A2%E5%8D%B3%E5%B0%86%E6%8A%95%E7%A5%A8%E5%AF%B9%E4%B9%8C%E6%8F%B4%E5%8A%A9%E6%B3%95%E6%A1%88%20%E4%BA%94%E8%A7%92%E5%A4%A7%E6%A5%BC%EF%BC%9A%E6%9C%89%E4%BA%9B%E5%86%9B%E6%8F%B4%E5%87%A0%E5%A4%A9%E5%86%85%E5%B0%B1%E8%83%BD%E8%BF%90%E6%8A%B5%E4%B9%8C%E5%85%8B%E5%85%B0%20-%20https%3A%2F%2Frfi.my%2FAX4K.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E7%BE%8E%E4%BC%97%E9%99%A2%E5%8D%B3%E5%B0%86%E6%8A%95%E7%A5%A8%E5%AF%B9%E4%B9%8C%E6%8F%B4%E5%8A%A9%E6%B3%95%E6%A1%88%20%E4%BA%94%E8%A7%92%E5%A4%A7%E6%A5%BC%EF%BC%9A%E6%9C%89%E4%BA%9B%E5%86%9B%E6%8F%B4%E5%87%A0%E5%A4%A9%E5%86%85%E5%B0%B1%E8%83%BD%E8%BF%90%E6%8A%B5%E4%B9%8C%E5%85%8B%E5%85%B0%20-%20https%3A%2F%2Frfi.my%2FAX4K.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAX4K.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E7%BE%8E%E4%BC%97%E9%99%A2%E5%8D%B3%E5%B0%86%E6%8A%95%E7%A5%A8%E5%AF%B9%E4%B9%8C%E6%8F%B4%E5%8A%A9%E6%B3%95%E6%A1%88%20%E4%BA%94%E8%A7%92%E5%A4%A7%E6%A5%BC%EF%BC%9A%E6%9C%89%E4%BA%9B%E5%86%9B%E6%8F%B4%E5%87%A0%E5%A4%A9%E5%86%85%E5%B0%B1%E8%83%BD%E8%BF%90%E6%8A%B5%E4%B9%8C%E5%85%8B%E5%85%B0&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>19/04/2024 - 10:18</div><img src="https://s.rfi.fr/media/display/97390bd4-fe0b-11ee-8376-005056bf30b7/w:1280/p:16x9/000_34PR6GE.jpg"><p><strong>伊朗中部周五凌晨听到剧烈爆炸声，以色列军方拒绝置评，美媒披露以色列向美国预告了这次袭击。        </strong></p><div><p>以色列周五夜间对伊朗发动了攻击。据德黑兰官方“法尔斯”通讯社报道，周五黎明时分，伊朗中部一个军事基地附近发生了三起爆炸事件。据伊朗国家电视台报道，中部伊斯法罕省听到了"巨大的爆炸声"，爆炸原因尚不清楚。</p><p>伊朗立即启动了多个省份的防空系统。伊朗当局表示，无人机已被击落，但"迄今为止 "没有发生导弹袭击。</p><p>不过，伊朗的“塔斯-尼姆”通讯社周五援引"消息灵通人士"说，在伊朗听到爆炸声后，"没有外国袭击的消息"。该通讯社称，"与以色列媒体的谣言和说法相反"，"没有任何关于外国对“伊斯法罕”中心城市或任何其他地区发动袭击的消息"。伊朗领导人尚未就爆炸事件公开发表评论。</p><p>据美国媒体报道，美国高级官员称，以色列对伊朗发动袭击是为了报复上周末以色列遭到的史无前例的无人机和导弹袭击。</p><p>白宫没有立即发表评论。但美国全国广播公司（NBC）和美国有线电视新闻网（CNN）分别援引熟悉此事的消息人士和一名美国官员的话报道说，以色列已提前向华盛顿发出了袭击警告，但美国没有同意这次行动，也没有参与实施。"据 CNN 报道，一名美国官员说："我们没有同意报复行动。</p><p>上周末，伊朗向以色列境内发射了数百枚导弹和无人机，以色列警告称将进行报复。在伊朗袭击上周末袭击以色列之前，伊朗驻大马士革领事馆遭袭击，德黑兰认为以色列负有责任。</p><p>以色列军方在周五早晨宣布，以色列北部已启动警报。</p><p>以色列军队发言人就爆炸事件告诉法新社记者："我们目前不予置评。</p><p>不过，以色列极右翼的国家安全部长本-格-维-尔（Ben Gvir）在 X 上发布一句话说"软弱！"</p><p>伊朗总统易卜拉欣-拉伊西（Ebrahim Raissi）本周曾表示，以色列对伊朗领土的任何攻击"都将遭到严厉回应"。</p><p>伊朗周四在联合国安理会表示，"必须迫使以色列停止针对我们利益的任何进一步军事冒险主义"，而联合国秘书长则警告说，中东正处于"最危险的时刻"。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWwW.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E5%259B%25BD%25E9%2599%2585%2F20240419-%25E4%25BB%25A5%25E8%2589%25B2%25E5%2588%2597%25E8%25A2%25AB%25E6%258C%2587%25E5%25AF%25B9%25E4%25BC%258A%25E6%259C%2597%25E5%258F%2591%25E5%258A%25A8%25E6%2594%25BB%25E5%2587%25BB-%25E4%25BC%258A%25E6%259C%2597%25E4%25B8%25AD%25E9%2583%25A8%25E5%2590%25AC%25E5%2588%25B0%25E5%2589%25A7%25E7%2583%2588%25E7%2588%2586%25E7%2582%25B8%25E5%25A3%25B0&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E4%BB%A5%E8%89%B2%E5%88%97%E8%A2%AB%E6%8C%87%E5%AF%B9%E4%BC%8A%E6%9C%97%E5%8F%91%E5%8A%A8%E6%94%BB%E5%87%BB%20%E4%BC%8A%E6%9C%97%E4%B8%AD%E9%83%A8%E5%90%AC%E5%88%B0%E5%89%A7%E7%83%88%E7%88%86%E7%82%B8%E5%A3%B0%20-%20https%3A%2F%2Frfi.my%2FAWwW.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E4%BB%A5%E8%89%B2%E5%88%97%E8%A2%AB%E6%8C%87%E5%AF%B9%E4%BC%8A%E6%9C%97%E5%8F%91%E5%8A%A8%E6%94%BB%E5%87%BB%20%E4%BC%8A%E6%9C%97%E4%B8%AD%E9%83%A8%E5%90%AC%E5%88%B0%E5%89%A7%E7%83%88%E7%88%86%E7%82%B8%E5%A3%B0%20-%20https%3A%2F%2Frfi.my%2FAWwW.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWwW.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E4%BB%A5%E8%89%B2%E5%88%97%E8%A2%AB%E6%8C%87%E5%AF%B9%E4%BC%8A%E6%9C%97%E5%8F%91%E5%8A%A8%E6%94%BB%E5%87%BB%20%E4%BC%8A%E6%9C%97%E4%B8%AD%E9%83%A8%E5%90%AC%E5%88%B0%E5%89%A7%E7%83%88%E7%88%86%E7%82%B8%E5%A3%B0&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div><br><hr><div>获取更多RSS：<br><a href="https://feedx.net" style="color:orange" target="_blank">https://feedx.net</a> <br><a href="https://feedx.run" style="color:orange" target="_blank">https://feedx.run</a><br></div>
