--- a/articles/rfi/999956.md
+++ b/articles/rfi/999956.md
@@ -1,5 +1,5 @@
-<!--1713651303000-->
-[谢锋在哈佛肯尼迪学院演讲遭活动人士当面抗议](https://www.rfi.fr/cn/%E6%94%BF%E6%B2%BB/20240420-%E8%B0%A2%E9%94%8B%E5%9C%A8%E5%93%88%E4%BD%9B%E8%82%AF%E5%B0%BC%E8%BF%AA%E5%AD%A6%E9%99%A2%E6%BC%94%E8%AE%B2%E9%81%AD%E6%B4%BB%E5%8A%A8%E4%BA%BA%E5%A3%AB%E5%BD%93%E9%9D%A2%E6%8A%97%E8%AE%AE)
+<!--1713665701000-->
+[美众院通过外援法案：欧盟北约等一致欢迎 泽连斯基称&quot;将拯救成千上万生命&quot;](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20240420-%E7%BE%8E%E4%BC%97%E9%99%A2%E9%80%9A%E8%BF%87%E5%A4%96%E6%8F%B4%E6%B3%95%E6%A1%88-%E6%AC%A7%E7%9B%9F%E5%8C%97%E7%BA%A6%E7%AD%89%E4%B8%80%E8%87%B4%E6%AC%A2%E8%BF%8E-%E6%B3%BD%E8%BF%9E%E6%96%AF%E5%9F%BA%E7%A7%B0-%E5%B0%86%E6%8B%AF%E6%95%91%E6%88%90%E5%8D%83%E4%B8%8A%E4%B8%87%E7%94%9F%E5%91%BD)
 ------
 
-<div>20/04/2024 - 22:56</div><img src="https://s.rfi.fr/media/display/7994c156-ff53-11ee-badb-005056a90284/w:1280/p:16x9/Capture-2207.JPG"><p><strong>4月20日，中国驻美大使谢锋在参加由哈佛大学肯尼迪政治学院举办的“中国会议”讲话时遭到至少三名在场活动人士的起立抗议，他的讲话也因此被打断。        </strong></p><div><p>据网络流传的视频及媒体报导显示，三名抗议者中两女一男，他们在谢锋站在讲台发言时分别起立抗议，高呼关注西藏、新疆人权状况及香港自由民主等议题的口号。这三人随后依次被现场身着西装的疑似安保人员及警察带离。其中一名女子在被带走时高呼“犯有灭绝种族罪”、“你手上沾有鲜血”等口号，另一男子质问谢锋：“中国政府直接违反了世界上所有的人权法，你怎么能在这里？”。他在被带出场时还称，“这是个自由的国家，你不能把你们的跨国镇压强加给这个国家”。第二名抗议女子在被带离时还提及台湾问题。</p>                <divid="em-WBMZ109396-RFI-CN-20240420"><blockquote><p>BREAKING: TIBETAN AND TAIWANESE HARVARD STUDENTS DISRUPT CHINESE AMBASSADOR TO THE U.S. XIE FENG&#39;S ADDRESS AT HARVARD<br><br>They called out his complicity in advocating for the genocide of Tibet and East Turkestan, destroying HK’s freedoms, and a military invasion of Taiwan. <a href="https://t.co/KrgHboOhol">pic.twitter.com/KrgHboOhol</a></p>&mdash; Students for a Free Tibet (@SFTHQ) <a href="https://twitter.com/SFTHQ/status/1781685309203190058?ref_src=twsrc%5Etfw">April 20, 2024</a></blockquote> <script async src="" charset="utf-8"></script><figcaption><span></span></figcaption></div><divid="em-WBMZ109395-RFI-CN-20240420"><blockquote><p>UPDATE: SFT ACTIVIST INTERRUPTS AMB. XIE AGAIN DURING TALK<br><br>SFT activist asked Xie how he could be at the Harvard Kennedy School of Government when the Chinese government is directly violating every human rights law in the world.<br><br>Again, the Ambassador was stunned into silence. <a href="https://t.co/B6Hkn0o0J9">pic.twitter.com/B6Hkn0o0J9</a></p>&mdash; Students for a Free Tibet (@SFTHQ) <a href="https://twitter.com/SFTHQ/status/1781717822550298683?ref_src=twsrc%5Etfw">April 20, 2024</a></blockquote> <script async src="" charset="utf-8"></script><figcaption><span></span></figcaption></div><p>据该活动网页介绍，“‘中国会议’利用哈佛大学肯尼迪学院的独特地位，汇聚了来自学术界、政府、商界和非营利部门的思想领袖。我们的目标是促进跨学科对话、跨部门合作和思想交流。今年，我们预计讨论的重要议题包括美中关系、全球宏观经济、人工智能、半导体产业、地缘政治、气候变化以及中国与其他发展中国家的关系”。除谢锋外，特邀发言人还包括肯尼迪政治学院的前院长格雷厄姆·艾利森（Graham Allison）等。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAXD6.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E6%2594%25BF%25E6%25B2%25BB%2F20240420-%25E8%25B0%25A2%25E9%2594%258B%25E5%259C%25A8%25E5%2593%2588%25E4%25BD%259B%25E8%2582%25AF%25E5%25B0%25BC%25E8%25BF%25AA%25E5%25AD%25A6%25E9%2599%25A2%25E6%25BC%2594%25E8%25AE%25B2%25E9%2581%25AD%25E6%25B4%25BB%25E5%258A%25A8%25E4%25BA%25BA%25E5%25A3%25AB%25E5%25BD%2593%25E9%259D%25A2%25E6%258A%2597%25E8%25AE%25AE&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E8%B0%A2%E9%94%8B%E5%9C%A8%E5%93%88%E4%BD%9B%E8%82%AF%E5%B0%BC%E8%BF%AA%E5%AD%A6%E9%99%A2%E6%BC%94%E8%AE%B2%E9%81%AD%E6%B4%BB%E5%8A%A8%E4%BA%BA%E5%A3%AB%E5%BD%93%E9%9D%A2%E6%8A%97%E8%AE%AE%20-%20https%3A%2F%2Frfi.my%2FAXD6.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E8%B0%A2%E9%94%8B%E5%9C%A8%E5%93%88%E4%BD%9B%E8%82%AF%E5%B0%BC%E8%BF%AA%E5%AD%A6%E9%99%A2%E6%BC%94%E8%AE%B2%E9%81%AD%E6%B4%BB%E5%8A%A8%E4%BA%BA%E5%A3%AB%E5%BD%93%E9%9D%A2%E6%8A%97%E8%AE%AE%20-%20https%3A%2F%2Frfi.my%2FAXD6.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAXD6.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E8%B0%A2%E9%94%8B%E5%9C%A8%E5%93%88%E4%BD%9B%E8%82%AF%E5%B0%BC%E8%BF%AA%E5%AD%A6%E9%99%A2%E6%BC%94%E8%AE%B2%E9%81%AD%E6%B4%BB%E5%8A%A8%E4%BA%BA%E5%A3%AB%E5%BD%93%E9%9D%A2%E6%8A%97%E8%AE%AE&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div><br><hr><div>获取更多RSS：<br><a href="https://feedx.net" style="color:orange" target="_blank">https://feedx.net</a> <br><a href="https://feedx.run" style="color:orange" target="_blank">https://feedx.run</a><br></div>
+<div>20/04/2024 - 23:14</div><img src="https://s.rfi.fr/media/display/dba69570-ff5a-11ee-80b5-005056bf30b7/w:1280/p:16x9/2024-04-20T200417Z_1629375317_RC2G2W9TGCES_RTRMADP_3_USA-CONGRESS-UKRAINE-ZELENSKIY.JPG"><p><strong>经过漫长而艰难的谈判，美国国会众议院周六(4月20日）终于通过对乌克兰、以色列和台湾950亿美元庞大对外援助法案，乌克兰总统泽连斯基及欧盟和北约等各国一致对此表示欢迎。泽连斯基称"法案将阻止战争蔓延，拯救成千上万生命"，美国总统拜登也对众院在"历史性的会议上"通过关键的援乌法案表示欢迎。        </strong></p><div><p>法新社报道，在美国众院周六通过美国向乌克兰提供近610亿美元的援助法案后，乌克兰总统泽连斯基立即对此表示欢迎，泽连斯基在X 上发文感谢美国的议员们称：“美国众议院今天通过的拯救生命的法案将阻止战争蔓延，拯救成千上万的生命，并将使我们两国变得更加强大。”</p><p>作为乌克兰最重要的支持者，美国总统拜登也在第一时间对众院在"历史性的会议上"通过关键的援乌法案表示欢迎。法案获两院通过后，将呈交总统拜登批准。</p><p>北约和欧盟 领导人周六也纷纷对美国众议院批准备受期待援乌法案表示欢迎。</p><p>北约秘书长斯托尔滕贝格表示，对美国众议院批准重要的援乌新法案表示欢迎，他说，这表明(美国国会）两党对乌克兰持续的支持。斯托尔滕贝格表示， “乌克兰正在使用北约盟国提供的武器摧毁俄罗斯的作战能力，此举将加强欧洲和北美所有人的安全”。</p><p>欧盟委员会主席冯德莱恩及欧洲理事会主席米歇尔也对美国众议院的投票结果表示欢迎。</p><p>欧洲理事会主席米歇尔在 X 上发文称， “这向克里姆林宫发出了一个明确的信息：那些相信自由和《联合国宪章》的人将继续支持乌克兰”；冯德莱恩在一份声明中表示：“乌克兰应该得到应对俄罗斯入侵的一切支持。现在我们呼吁美国参议院尽快投票，因为生命危在旦夕。跨大西洋盟友国家将团结一致支持自由和民主” 。</p><p>另外，德国外长贝尔博克表示，“对于乌克兰和欧洲的安全来说这是一个充满乐观情绪的一天”。贝尔伯克表示，“美国援助乌克兰的一个主要障碍已经消除，美国和欧洲站在自由一边，反对普京的恐怖战争”。</p><p>美国参议院民主党领袖舒默周六表示，参议院将尽快审议对外援助法案文本，最早可能在下周二进行。</p><p>共和党控制的美国联邦众议院周六通过总值950亿美元的对外援助法案，向乌克兰、以色列和台湾提供安全援助，并强制TikTok脱离中国母公司字节跳动。</p><p>众院周六以360票对58票通过表决的第1项法案，即"21世纪透过实力达成和平法案"（21st Century Peace through Strength Act），法案内容包括对伊朗的制裁、扣押冻结的俄罗斯主权资产，以及迫使短视频平台TikTok脱离中国母公司字节跳动（ByteDance），否则将在美国面临全国性禁令。TikTok在美国拥有约1.7亿用户。</p><p>随后，众院以385票对34票的投票结果，通过81亿美元的"印太安全补充法案"（Indo-Pacific Security Supplemental bill），其中包括向台湾和其他主要盟友提供20亿美元军事资金、用以补充向台湾和区域伙伴提供的国防物资和服务的19亿美元，以及用于抗衡中国的81亿美元。</p><p>"乌克兰安全补充拨款法案"（Ukraine Security Supplemental Appropriations Act）则以311票对112票过关，该法案将提供610亿美元以协助乌克兰和地区合作伙伴对抗俄罗斯。</p><p>最后，众院以366票对58票通过"以色列安全补充法案"（Israel Security Supplemental bill），以向以色列提供264亿美元援助。</p><p>上述4个法案获众院通过后将合并为1项修正案，并提交给参议院。</p><p>路透社报导，自民主党主导的联邦参议院通过类似措施以来，已过了2个多月。从民主党籍总统拜登到联邦参议院共和党领袖麦康奈（Mitch McConnell）等领导人，一直在敦促陷入困境的共和党籍众院议长约翰逊将其提交投票。</p><p>联邦参议院多数党领袖舒默（Chuck Schumer）先前已承诺，一旦众议院通过上述措施，民主党占多数的参议院将迅速行动。部分强硬派共和党籍极右翼议员则警告，他们可能会因约翰逊推动这些法案而罢免他。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAXDJ.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25B8%25AD%25E5%259B%25BD%2F20240420-%25E7%25BE%258E%25E4%25BC%2597%25E9%2599%25A2%25E9%2580%259A%25E8%25BF%2587%25E5%25A4%2596%25E6%258F%25B4%25E6%25B3%2595%25E6%25A1%2588-%25E6%25AC%25A7%25E7%259B%259F%25E5%258C%2597%25E7%25BA%25A6%25E7%25AD%2589%25E4%25B8%2580%25E8%2587%25B4%25E6%25AC%25A2%25E8%25BF%258E-%25E6%25B3%25BD%25E8%25BF%259E%25E6%2596%25AF%25E5%259F%25BA%25E7%25A7%25B0-%25E5%25B0%2586%25E6%258B%25AF%25E6%2595%2591%25E6%2588%2590%25E5%258D%2583%25E4%25B8%258A%25E4%25B8%2587%25E7%2594%259F%25E5%2591%25BD&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E7%BE%8E%E4%BC%97%E9%99%A2%E9%80%9A%E8%BF%87%E5%A4%96%E6%8F%B4%E6%B3%95%E6%A1%88%EF%BC%9A%E6%AC%A7%E7%9B%9F%E5%8C%97%E7%BA%A6%E7%AD%89%E4%B8%80%E8%87%B4%E6%AC%A2%E8%BF%8E%20%E6%B3%BD%E8%BF%9E%E6%96%AF%E5%9F%BA%E7%A7%B0%22%E5%B0%86%E6%8B%AF%E6%95%91%E6%88%90%E5%8D%83%E4%B8%8A%E4%B8%87%E7%94%9F%E5%91%BD%22%20-%20https%3A%2F%2Frfi.my%2FAXDJ.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E7%BE%8E%E4%BC%97%E9%99%A2%E9%80%9A%E8%BF%87%E5%A4%96%E6%8F%B4%E6%B3%95%E6%A1%88%EF%BC%9A%E6%AC%A7%E7%9B%9F%E5%8C%97%E7%BA%A6%E7%AD%89%E4%B8%80%E8%87%B4%E6%AC%A2%E8%BF%8E%20%E6%B3%BD%E8%BF%9E%E6%96%AF%E5%9F%BA%E7%A7%B0%22%E5%B0%86%E6%8B%AF%E6%95%91%E6%88%90%E5%8D%83%E4%B8%8A%E4%B8%87%E7%94%9F%E5%91%BD%22%20-%20https%3A%2F%2Frfi.my%2FAXDJ.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAXDJ.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E7%BE%8E%E4%BC%97%E9%99%A2%E9%80%9A%E8%BF%87%E5%A4%96%E6%8F%B4%E6%B3%95%E6%A1%88%EF%BC%9A%E6%AC%A7%E7%9B%9F%E5%8C%97%E7%BA%A6%E7%AD%89%E4%B8%80%E8%87%B4%E6%AC%A2%E8%BF%8E%20%E6%B3%BD%E8%BF%9E%E6%96%AF%E5%9F%BA%E7%A7%B0%22%E5%B0%86%E6%8B%AF%E6%95%91%E6%88%90%E5%8D%83%E4%B8%8A%E4%B8%87%E7%94%9F%E5%91%BD%22&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
