--- a/articles/rfi/999960.md
+++ b/articles/rfi/999960.md
@@ -1,5 +1,5 @@
-<!--1713640502000-->
-[伊朗-以色列：以色列谨慎回应，似乎是为了让德黑兰可以选择不回应 - 法国世界报](https://www.rfi.fr/cn/%E4%B8%93%E6%A0%8F%E6%A3%80%E7%B4%A2/%E6%B3%95%E5%9B%BD%E4%B8%96%E7%95%8C%E6%8A%A5/20240419-%E4%BC%8A%E6%9C%97-%E4%BB%A5%E8%89%B2%E5%88%97-%E4%BB%A5%E8%89%B2%E5%88%97%E8%B0%A8%E6%85%8E%E5%9B%9E%E5%BA%94%EF%BC%8C%E4%BC%BC%E4%B9%8E%E6%98%AF%E4%B8%BA%E4%BA%86%E8%AE%A9%E5%BE%B7%E9%BB%91%E5%85%B0%E5%8F%AF%E4%BB%A5%E9%80%89%E6%8B%A9%E4%B8%8D%E5%9B%9E%E5%BA%94)
+<!--1713651303000-->
+[中国海军成立75周年之际，美菲将举行迄今规模最大的「肩并肩」军演 - 要闻解说](https://www.rfi.fr/cn/%E4%B8%93%E6%A0%8F%E6%A3%80%E7%B4%A2/%E8%A6%81%E9%97%BB%E8%A7%A3%E8%AF%B4/20240420-%E4%B8%AD%E5%9B%BD%E6%B5%B7%E5%86%9B%E6%88%90%E7%AB%8B75%E5%91%A8%E5%B9%B4%E4%B9%8B%E9%99%85%EF%BC%8C%E7%BE%8E%E8%8F%B2%E5%B0%86%E4%B8%BE%E8%A1%8C%E8%BF%84%E4%BB%8A%E8%A7%84%E6%A8%A1%E6%9C%80%E5%A4%A7%E7%9A%84-%E8%82%A9%E5%B9%B6%E8%82%A9-%E5%86%9B%E6%BC%94)
 ------
 
-<div>20/04/2024 - 00:34</div><img src="https://s.rfi.fr/media/display/bddd2032-0bde-11ea-9862-005056bff430/w:1280/p:16x9/fa_guo_shi_jie_bao_wb161923-rfi-cn-20150123_cartouche.jpg"><p><strong>周五，伊朗军事地点附近传出了爆炸声，目前尚不清楚伊朗所受袭击的规模和性质。德黑兰当局对爆炸轻描淡写，以色列政府和军队则还没有对此次袭击发表评论，也没有宣称对伊朗领土上的爆炸负责。自伊朗在上周六袭击以色列以来，国际社会一直在呼吁以色列做出温和的反应，以免整个地区都燃烧起来。                    </strong></p><div><p>法国世界报记者加扎尔·戈尔希里（Ghazal Golshiri）以及该报耶路撒冷通讯员路易斯·安伯特（Louis Imbert）联合写道，4月19日星期五一大早，以色列就伊朗4月13日对以色列领土发动的无人机和导弹袭击做出了回应。</p><p>据报道，伊朗中部城市伊斯法罕（Ispahan）附近发生爆炸，这里有多个军事基地，包括核设施和弹道导弹设施。4月14日，从这些军事地点有拍摄到导弹发射，射向至少一个以色列空军基地。</p><p>伊斯法罕市的一名居民告诉法国《世界报》说，他感受到了强烈的震动，他最初认为“是发生了地震。”隶属于伊朗革命卫队的法尔斯通讯社则提到“伊斯法罕陆军战斗机基地附近发生了三起爆炸”，并声称伊朗启动了拦截可能的无人机的防空系统。法尔斯通讯社还指出，另一个可疑飞行物体让距离一炼油厂几公里的大不里士（Tabriz，西北）的防空系统也被启动了。</p><p>然而，德黑兰当局对以色列的军事回应轻描淡写，至今，对以色列军事回应的性质和方式，外界依然不确定。</p><p>伊朗总统莱希周五发表讲话但没有提及爆炸事件。伊朗总统莱希周五在达姆甘市向数百人发表讲话，非常简短地提及了上周末伊朗对以色列发动前所未有的无人机和导弹袭击后中东紧张的国际局势，但没有提到几个小时前的爆炸事件。</p><p>伊朗媒体周五援引伊斯法罕陆军指挥官西亚沃什·米汉杜斯特（Siavosh Mihandoust）的话说，当地居民听到的爆炸声来自防空系统。这位指挥官坚称，“我们没有受到任何损害，也没有发生任何事件。”自周五黎明时分起，伊朗官方电视台就派遣记者前往伊斯法罕市中心，以表明那里局势平静，日常生活一切照常。</p><p><strong>伊朗说没有导弹袭击</strong></p><p>一名经常代表伊朗革命卫队发言的网络空间最高委员会的一名官员则否认此次袭击涉及导弹袭击。周五，以色列既没有证实也没有否认这一消息。这名伊朗官员声称，有无人机被击落，但没有导弹袭击。他说，被击落的无人机射程较短，是从伊朗境内发射的。一位伊朗分析人士在伊朗国家电视台上说，被击落的“微型无人机”是由“伊朗领土上的渗透者”发射的，他说，以色列国外情报机构有能力这么做，至少在过去，以色列国外情报机构已经进行过一次这一类型的攻击。在黎明时暂停的德黑兰机场的航班，原定周五上午恢复。</p><p>在以色列一边，截至周五晚上，以色列政府和军队尚没有对此次袭击发表评论，也没有宣称对伊朗领土上的爆炸负责。不过，以色列国家安全部长伊塔马尔·本·格维尔(Itamar Ben Gvir)对以色列回应的明显“虚弱”表示遗憾。本·格维尔来自宗教极右翼，被排除在战时内阁之外，他使用了一个希伯来语足球用语，表示射门缺乏力量。这显示，伊朗境内的爆炸，以色列脱不了干系。但以色列的回应既精确又规模有限，似乎以色列并不希望局势有新的升级。</p><p>就目前的情况来看，以色列似乎选择了相对谨慎的回应，以便让德黑兰当局可以选择不回应。</p><p><strong>叙利亚也遭遇了空袭</strong></p><p>另外，周五，除了伊朗，叙利亚也遭遇了空袭。叙利亚国家通讯社SANA援引军方消息人士的话称，以色列在夜间还袭击了叙利亚南部的防空系统，造成了一些“物质损失”。以色列这是为了表明它将继续对伊朗的地区盟友采取密集的军事行动。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div><div><div><span>作者：</span><a href="/cn/%E4%BD%9C%E8%80%85/%E9%98%BF%E6%9B%BC%E4%BA%AD/" title="阿曼亭">阿曼亭</a></div></div></div></div><br><hr><div>获取更多RSS：<br><a href="https://feedx.net" style="color:orange" target="_blank">https://feedx.net</a> <br><a href="https://feedx.run" style="color:orange" target="_blank">https://feedx.run</a><br></div>
+<div>20/04/2024 - 13:40</div><img src="https://s.rfi.fr/media/display/e98fc2f0-ff06-11ee-9e4b-005056bfb2b6/w:1280/p:16x9/a4b36f8e-0be8-4841-92e5-1998c81bd74e.png"><p><strong>中国海军成立75周年之际，美菲将举行史上最大规模的「肩并肩」（Balikatan）联合军演。这项一年一度的演习从4月22日起至5月10日结束，届时将约有16,700名军人参加，美方将出动11,000人，菲方将派出5000多人。他们将参加海上安全、空中和导弹防御、动态导弹打击、网络防御和信息作战等方面的训练。                    </strong></p><div><p>据路透社报道，负责这次演习的菲律宾陆军上校迈克尔·洛基科（Michael Logico）说，这将是首次在菲律宾领海之外进行的海上演习。他表示，美菲军人将模拟收复菲律宾最北端被敌方军队占领的岛屿。该岛屿位于面向南中国海的巴拉望省西部，靠近台湾，其中最北端的雅米岛距离台湾仅约140公里。</p><p>美菲军队「肩并肩」联演举行始于1991年，至今已经34个年头。在今年的年度演习中，法国军队将首次派出一艘护卫舰参加，与菲律宾和美国海军军舰在马尼拉南中国海内专属经济区联合巡航。这次由菲律宾、美国和法国海军联合举行的演习被视为历届「肩并肩」规模最大的一次。</p><p>但法国与菲律宾两国并没有签署「驻军地位协议」（SOFA），因此法军只能在菲律宾领海之外参加演习。</p><p>路透社指出，此次演习旨在提高美国和菲律宾两军之间的互操作性。此次演习是在中国最近在南中国海和台湾海峡频频采取咄咄逼人的行为的背景下进行的，而南中国海和台湾海峡是中美紧张关系的导火索。</p><p><strong>针对美菲军演 中国反对“威慑第三方”</strong></p><p>针对美菲计划中的演习，中国外交部已警告菲律宾应该“清醒地认识到”，“拉拢域外国家在南海炫耀武力、挑起对抗，只会加剧紧张局势，破坏地区稳定”。</p><p>据中央社援引中国军事问题专家曹卫东周六向媒体表示，反对菲律宾引进外国的军事力量威慑第三方，并说这已非单单保护菲律宾。</p><p>曹卫东说，美菲两国的军事关系是两国的事情，但中方反对的是军事关系针对第三方。中国与菲律宾是南海周边国家，存在岛屿主权与海上画线争端的问题。</p><p>曹卫东指，美国在菲律宾有5个基地，现在又有4个，其中3个在吕宋岛，“靠近我们的台湾地区”。并且又部署「堤丰武器系统」（Typhon Weapons System ），可搭载「战斧」（Tomahawk）巡戈导弹，加上「标准六型」（SM-6）导弹，这令台湾在「战斧」巡戈导弹的覆盖之下。</p><p>据他强调，中方因而要考虑，“这对台湾岛构成威胁”，还对广东等沿海构成威胁，离大陆的东南沿海城市也很近。如果将这种军事基地部署在菲律宾，无论是对台湾还是中国大陆，“都是安全上的威胁”。</p><p>曹卫东又说，中方坚决反对这样的演习，因为威胁其他国家。除此之外，美菲演习扩大，向外海推进，并且是在美国与俄罗斯撕毁「中导条约」后，第一次在境外部署陆基中程弹道导弹，射程在500公里至5500公里，“部署在我们家门口”，对中国的意图是非常明显。</p><p>至于19日共军成立信息支持部队，曹卫东仅表示，这与编制体制有关，这种改变还是对未来讯息条件下的军事任务有关。</p><p><strong>美军新型陆基导弹首度登上第一岛链</strong></p><p>另据美国《海军新闻》15日消息称，美国陆军的新型陆基导弹发射系统最近在菲律宾北部部署，这套被称为「堤丰」（Typhon）武器系统的中程能力陆基导弹发射系统，正在参与为期两周的「坚盾-24」（Salaknib 24）美菲陆军联合演习。</p><p>该陆基导弹发射系统由美国洛克希德马丁公司设计、原采用海军MK-41垂直发射系统，修改后用于陆基作战。值得一提的是，此次是这套新型陆基导弹系统首次在“第一岛链”亮相，中其程导弹的射程可达两千公里以上，因此被认为可达中国东南沿海地带及敏感的南海及台湾海峡区域。专家视此为对中国发出警示，传达美国在印太地区的军事防御能力。</p><p>美国陆军新闻稿亦指出，部署「堤丰」武器系统“目的是提升菲律宾的海上防御能力，同时强化美菲同盟的协同工作能力与战备”。</p><p>值得关注还有，军事专家表示，美方在美菲联演部属的系统，可应付中国各型导弹。例如战斧可攻击中国南方陆地、在南海的基地。如果美军必须在西太平洋或在南海跟解放军交战，美军会快速派出派遣部队到第一岛链上各岛屿，并在快速部队掩护下，设各型导弹基地，一方面去拦截中国可能对第一岛链上美国的各盟邦或伙伴国，乃至美军基地，甚至是第二岛链关岛等的设施的攻击。</p><p>针对美国的举动，中南海也随即释出高调反制信号，发布与古巴军事高层在北京有军事对话的消息，较劲意味十分浓厚，再次折射出当下美、菲、中在此区域的激烈角力。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div><div><div><span>作者：</span><a href="/cn/%E4%BD%9C%E8%80%85/%E5%A4%8F%E6%A6%95/" title="夏榕">夏榕</a></div></div></div></div>
