--- a/articles/rfi/999969.md
+++ b/articles/rfi/999969.md
@@ -1,5 +1,5 @@
-<!--1713595501000-->
-[涉巴基斯坦弹道导弹计划 美国制裁4实体包括3家中企](https://www.rfi.fr/cn/%E5%9B%BD%E9%99%85/20240419-%E6%B6%89%E5%B7%B4%E5%9F%BA%E6%96%AF%E5%9D%A6%E5%BC%B9%E9%81%93%E5%AF%BC%E5%BC%B9%E8%AE%A1%E5%88%92-%E7%BE%8E%E5%9B%BD%E5%88%B6%E8%A3%814%E5%AE%9E%E4%BD%93%E5%8C%85%E6%8B%AC3%E5%AE%B6%E4%B8%AD%E4%BC%81)
+<!--1713611701000-->
+[戴琪：对中国商品关税的审查将“很快”结束](https://www.rfi.fr/cn/%E7%BB%8F%E8%B4%B8/20240419-%E6%88%B4%E7%90%AA-%E5%AF%B9%E4%B8%AD%E5%9B%BD%E5%95%86%E5%93%81%E5%85%B3%E7%A8%8E%E7%9A%84%E5%AE%A1%E6%9F%A5%E5%B0%86-%E5%BE%88%E5%BF%AB-%E7%BB%93%E6%9D%9F)
 ------
 
-<div>20/04/2024 - 00:32</div><img src="https://s.rfi.fr/media/display/8e9d3e60-c1a1-11ee-9b11-005056a90284/w:1280/p:16x9/AP23199673095971.jpg"><p><strong>美国国务院发言人米勒（Matthew Miller）4月19日通过声明宣布，“根据针对大规模杀伤性武器及其运载工具扩散者的第13382号行政命令，我们正在指定四个实体。这些实体——三个位于中华人民共和国（PRC），一个位于白俄罗斯——向巴基斯坦的弹道导弹计划，包括其远程导弹计划提供了导弹适用物品”。他称，“美国致力于加强全球防扩散机制，采取行动破坏支持令人担忧的扩散活动的采购网络”。        </strong></p><div><p>米勒在声明中表示：“我们今天指定的实体：明斯克轮式拖拉机厂、西安龙德科技发展有限公司、天津Creative Source国际贸易有限公司（Tianjin Creative Source International Trade Co Ltd）和北京固鸿科技有限公司（Granpect Co. Ltd.），这些实体参与的活动或交易对巴基斯坦扩散大规模杀伤性武器或其运载工具，包括制造、获取、拥有、开发、运输、转移或使用此类物项的任何努力，起到了实质性作用，或构成了实质性作用的风险”。</p><p>该声明称：“美国与其他伙伴密切合作，致力于加强全球防扩散机制，无论大规模杀伤性武器的扩散网络出现在何处，都要对其进行威慑和瓦解”。根据相关法律规定，被指定人员在美国境内或由美国人拥有或控制的所有财产和财产权益均被封锁，必须向美国财政部海外资产控制办公室（OFAC）报告。</p><p>此外，所有直接或间接拥有一个或多个被封锁者50%或以上所有权的个人或实体也会被封锁。美国人或在美国境内，或过境进行的所有交易，凡涉及被指定者或在其他方面被封锁者的任何财产或财产权益的，均被禁止，除非获得美国财政部海外资产控制办公室颁发的一般或特定许可证的授权或豁免。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAX5W.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E5%259B%25BD%25E9%2599%2585%2F20240419-%25E6%25B6%2589%25E5%25B7%25B4%25E5%259F%25BA%25E6%2596%25AF%25E5%259D%25A6%25E5%25BC%25B9%25E9%2581%2593%25E5%25AF%25BC%25E5%25BC%25B9%25E8%25AE%25A1%25E5%2588%2592-%25E7%25BE%258E%25E5%259B%25BD%25E5%2588%25B6%25E8%25A3%25814%25E5%25AE%259E%25E4%25BD%2593%25E5%258C%2585%25E6%258B%25AC3%25E5%25AE%25B6%25E4%25B8%25AD%25E4%25BC%2581&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E6%B6%89%E5%B7%B4%E5%9F%BA%E6%96%AF%E5%9D%A6%E5%BC%B9%E9%81%93%E5%AF%BC%E5%BC%B9%E8%AE%A1%E5%88%92%20%E7%BE%8E%E5%9B%BD%E5%88%B6%E8%A3%814%E5%AE%9E%E4%BD%93%E5%8C%85%E6%8B%AC3%E5%AE%B6%E4%B8%AD%E4%BC%81%20-%20https%3A%2F%2Frfi.my%2FAX5W.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E6%B6%89%E5%B7%B4%E5%9F%BA%E6%96%AF%E5%9D%A6%E5%BC%B9%E9%81%93%E5%AF%BC%E5%BC%B9%E8%AE%A1%E5%88%92%20%E7%BE%8E%E5%9B%BD%E5%88%B6%E8%A3%814%E5%AE%9E%E4%BD%93%E5%8C%85%E6%8B%AC3%E5%AE%B6%E4%B8%AD%E4%BC%81%20-%20https%3A%2F%2Frfi.my%2FAX5W.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAX5W.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E6%B6%89%E5%B7%B4%E5%9F%BA%E6%96%AF%E5%9D%A6%E5%BC%B9%E9%81%93%E5%AF%BC%E5%BC%B9%E8%AE%A1%E5%88%92%20%E7%BE%8E%E5%9B%BD%E5%88%B6%E8%A3%814%E5%AE%9E%E4%BD%93%E5%8C%85%E6%8B%AC3%E5%AE%B6%E4%B8%AD%E4%BC%81&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>19/04/2024 - 22:59</div><img src="https://s.rfi.fr/media/display/1ffbec94-a1b4-11ed-b3c1-005056a90284/w:1280/p:16x9/2023-01-31T171740Z_1417667005_RC2UZX9T8WZU_RTRMADP_3_USA-TRADE-CHINA-TECH.JPG"><p><strong>美国贸易代表戴琪4月19日在受访时表示，她预计“很快”就会对价值3000多亿美元中国商品加征关税的审查得出结论，拜登政府一直在研究如何使相关措施更具战略性和有效性。        </strong></p><div><p>戴琪周五在接受彭博电视节目采访时说，拜登政府保留从特朗普执政时期继承的关税是出于 “战略目的”，并将其视为与北京打交道的有效筹码。她还指出，中国钢铁和铝业的产能过剩不仅威胁到美国，也威胁到世界各国，因此需要采取强有力的应对措施。</p><p>戴琪说，拜登政府正寻求“挺身而出，抵制那些可能被用来对经济体施加政治压力的弱点所带来的胁迫”。拜登总统周三讲话呼吁对中国钢铁和铝征收更高的关税，因为他想在11月大选前争取工会工人的支持。</p><p>拜登政府正推动的新关税，意在支撑美国钢铁业并讨好其工人，将对某些中国钢铁和铝产品征收25%的关税。这些关税将作为正在进行的审查的一部分，同时美国还对中国的造船业展开正式调查。</p><p>对中国提高金属关税的原因是，多年来从中国进口产品对美国国内买家来说一直不赢利。目前的301条款关税、特朗普时代的232条款关税以及其他现有的反倾销和反补贴关税，有效地消减了中国钢铁和铝的进口。</p><p>同时，美国贸易代表办公室17日宣布对中国海事、物流和造船业发起301调查，美国钢铁工人联合会（USW）等五大工会上月曾联名要求拜登政府进行相关调查。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAX50.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E7%25BB%258F%25E8%25B4%25B8%2F20240419-%25E6%2588%25B4%25E7%2590%25AA-%25E5%25AF%25B9%25E4%25B8%25AD%25E5%259B%25BD%25E5%2595%2586%25E5%2593%2581%25E5%2585%25B3%25E7%25A8%258E%25E7%259A%2584%25E5%25AE%25A1%25E6%259F%25A5%25E5%25B0%2586-%25E5%25BE%2588%25E5%25BF%25AB-%25E7%25BB%2593%25E6%259D%259F&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E6%88%B4%E7%90%AA%EF%BC%9A%E5%AF%B9%E4%B8%AD%E5%9B%BD%E5%95%86%E5%93%81%E5%85%B3%E7%A8%8E%E7%9A%84%E5%AE%A1%E6%9F%A5%E5%B0%86%E2%80%9C%E5%BE%88%E5%BF%AB%E2%80%9D%E7%BB%93%E6%9D%9F%20-%20https%3A%2F%2Frfi.my%2FAX50.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E6%88%B4%E7%90%AA%EF%BC%9A%E5%AF%B9%E4%B8%AD%E5%9B%BD%E5%95%86%E5%93%81%E5%85%B3%E7%A8%8E%E7%9A%84%E5%AE%A1%E6%9F%A5%E5%B0%86%E2%80%9C%E5%BE%88%E5%BF%AB%E2%80%9D%E7%BB%93%E6%9D%9F%20-%20https%3A%2F%2Frfi.my%2FAX50.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAX50.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E6%88%B4%E7%90%AA%EF%BC%9A%E5%AF%B9%E4%B8%AD%E5%9B%BD%E5%95%86%E5%93%81%E5%85%B3%E7%A8%8E%E7%9A%84%E5%AE%A1%E6%9F%A5%E5%B0%86%E2%80%9C%E5%BE%88%E5%BF%AB%E2%80%9D%E7%BB%93%E6%9D%9F&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
