--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+4-21 [新新默存｜你家的燃气费为何暴涨？只因权力太任性](/articles/cdt/341445.md)
+
 4-21 [學人Scholar｜劳东燕：压力端转移到最为弱势的群体，发生恶性刑事案件是迟早的事](/articles/cdt/341449.md)
 
 4-21 [每日一语 2024.4.20](/articles/cdt/341451.md)
@@ -598,6 +600,4 @@
 3-18 [电影少女放浪记｜一个野生记者的一年](/articles/cdt/342546.md)
 
 3-18 [新周刊｜30岁了，我妈还在我的家长群里](/articles/cdt/342548.md)
-
-3-18 [蕨经｜邯郸留守儿童杀人事件，是这个社会成年人的悲剧](/articles/cdt/342551.md)
 
